# audityzer-rust-analyzer

./: .rustfmt.toml  Cargo.toml  README.md  clippy.toml
src/: nanosuit.rs
src/analyzer/: mod.rs
src/analyzer/detectors/: mod.rs  reentrancy.rs
