[package]
name = "audityzer-rust-analyzer"
version = "1.0.0"
authors = ["Audityzer Team"]
edition = "2021"
license = "MIT"
description = "Layer 3: Rust-based code analyzer with eBPF tracing"
repository = "https://github.com/audityzer-org/audityzer-rust-analyzer"
readme = "README.md"
keywords = ["audit", "analyzer", "ebpf", "security", "blockchain"]
categories = ["development-tools", "cryptography"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Crypto
sha2 = "0.10"
ring = "0.17"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Code analysis
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# eBPF tracing
aya = { version = "0.12", features = ["async_tokio"] }

[dev-dependencies]
criterion = "0.5"
test-case = "3.3"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "audityzer-analyzer"
path = "src/main.rs"
